// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game Should be the same output on every run 1`] = `
Array [
  "Chet was added",
  "They are player number 1",
  "Pat was added",
  "They are player number 2",
  "Chet is the current player",
  "They have rolled a 4",
  "Chet's new location is 4",
  "The category is Pop",
  "Pop Question 0",
  "Answer was correct!!!!",
  "Chet now has 1 Gold Coins.",
  "Pat is the current player",
  "They have rolled a 4",
  "Pat's new location is 4",
  "The category is Pop",
  "Pop Question 1",
  "Answer was correct!!!!",
  "Pat now has 1 Gold Coins.",
  "Chet is the current player",
  "They have rolled a 4",
  "Chet's new location is 8",
  "The category is Pop",
  "Pop Question 2",
  "Answer was correct!!!!",
  "Chet now has 2 Gold Coins.",
  "Pat is the current player",
  "They have rolled a 4",
  "Pat's new location is 8",
  "The category is Pop",
  "Pop Question 3",
  "Answer was correct!!!!",
  "Pat now has 2 Gold Coins.",
  "Chet is the current player",
  "They have rolled a 4",
  "Chet's new location is 0",
  "The category is Pop",
  "Pop Question 4",
  "Answer was correct!!!!",
  "Chet now has 3 Gold Coins.",
  "Pat is the current player",
  "They have rolled a 4",
  "Pat's new location is 0",
  "The category is Pop",
  "Pop Question 5",
  "Answer was correct!!!!",
  "Pat now has 3 Gold Coins.",
  "Chet is the current player",
  "They have rolled a 4",
  "Chet's new location is 4",
  "The category is Pop",
  "Pop Question 6",
  "Answer was correct!!!!",
  "Chet now has 4 Gold Coins.",
  "Pat is the current player",
  "They have rolled a 4",
  "Pat's new location is 4",
  "The category is Pop",
  "Pop Question 7",
  "Answer was correct!!!!",
  "Pat now has 4 Gold Coins.",
  "Chet is the current player",
  "They have rolled a 4",
  "Chet's new location is 8",
  "The category is Pop",
  "Pop Question 8",
  "Answer was correct!!!!",
  "Chet now has 5 Gold Coins.",
  "Pat is the current player",
  "They have rolled a 4",
  "Pat's new location is 8",
  "The category is Pop",
  "Pop Question 9",
  "Answer was correct!!!!",
  "Pat now has 5 Gold Coins.",
  "Chet is the current player",
  "They have rolled a 4",
  "Chet's new location is 0",
  "The category is Pop",
  "Pop Question 10",
  "Answer was correct!!!!",
  "Chet now has 6 Gold Coins.",
]
`;

exports[`Game Should be the same output on every run 2`] = `
Array [
  "Player1 was added",
  "They are player number 1",
  "Player2 was added",
  "They are player number 2",
  "Player3 was added",
  "They are player number 3",
  "Player4 was added",
  "They are player number 4",
  "Player1 is the current player",
  "They have rolled a 6",
  "Player1's new location is 6",
  "The category is Sports",
  "Sports Question 0",
  "Answer was correct!!!!",
  "Player1 now has 1 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 2",
  "Player2's new location is 2",
  "The category is Sports",
  "Sports Question 1",
  "Answer was correct!!!!",
  "Player2 now has 1 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 3",
  "Player3's new location is 3",
  "The category is Rock",
  "Rock Question 0",
  "Question was incorrectly answered",
  "Player3 was sent to the penalty box",
  "Player4 is the current player",
  "They have rolled a 6",
  "Player4's new location is 6",
  "The category is Sports",
  "Sports Question 2",
  "Answer was correct!!!!",
  "Player4 now has 1 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 2",
  "Player1's new location is 8",
  "The category is Pop",
  "Pop Question 0",
  "Answer was correct!!!!",
  "Player1 now has 2 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 4",
  "Player2's new location is 6",
  "The category is Sports",
  "Sports Question 3",
  "Answer was correct!!!!",
  "Player2 now has 2 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 2",
  "Player3 is not getting out of the penalty box",
  "Player4 is the current player",
  "They have rolled a 6",
  "Player4's new location is 0",
  "The category is Pop",
  "Pop Question 1",
  "Answer was correct!!!!",
  "Player4 now has 2 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 2",
  "Player1's new location is 10",
  "The category is Sports",
  "Sports Question 4",
  "Answer was correct!!!!",
  "Player1 now has 3 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 4",
  "Player2's new location is 10",
  "The category is Sports",
  "Sports Question 5",
  "Answer was correct!!!!",
  "Player2 now has 3 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 4",
  "Player3 is not getting out of the penalty box",
  "Player4 is the current player",
  "They have rolled a 3",
  "Player4's new location is 3",
  "The category is Rock",
  "Rock Question 1",
  "Answer was correct!!!!",
  "Player4 now has 3 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 1",
  "Player1's new location is 11",
  "The category is Rock",
  "Rock Question 2",
  "Answer was correct!!!!",
  "Player1 now has 4 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 6",
  "Player2's new location is 4",
  "The category is Pop",
  "Pop Question 2",
  "Answer was correct!!!!",
  "Player2 now has 4 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 4",
  "Player3 is not getting out of the penalty box",
  "Player4 is the current player",
  "They have rolled a 1",
  "Player4's new location is 4",
  "The category is Pop",
  "Pop Question 3",
  "Answer was correct!!!!",
  "Player4 now has 4 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 5",
  "Player1's new location is 4",
  "The category is Pop",
  "Pop Question 4",
  "Answer was correct!!!!",
  "Player1 now has 5 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 2",
  "Player2's new location is 6",
  "The category is Sports",
  "Sports Question 6",
  "Answer was correct!!!!",
  "Player2 now has 5 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 3",
  "Player3 is getting out of the penalty box",
  "Player3's new location is 6",
  "The category is Sports",
  "Sports Question 7",
  "Answer was correct!!!!",
  "Player3 now has 1 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 1",
  "Player4's new location is 5",
  "The category is Science",
  "Science Question 0",
  "Answer was correct!!!!",
  "Player4 now has 5 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 5",
  "Player1's new location is 9",
  "The category is Science",
  "Science Question 1",
  "Answer was correct!!!!",
  "Player1 now has 6 Gold Coins.",
]
`;

exports[`Game Should be the same output on every run 3`] = `
Array [
  "Player1 was added",
  "They are player number 1",
  "Player2 was added",
  "They are player number 2",
  "Player3 was added",
  "They are player number 3",
  "Player4 was added",
  "They are player number 4",
  "Player1 is the current player",
  "They have rolled a 1",
  "Player1's new location is 1",
  "The category is Science",
  "Science Question 0",
  "Answer was correct!!!!",
  "Player1 now has 1 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 5",
  "Player2's new location is 5",
  "The category is Science",
  "Science Question 1",
  "Answer was correct!!!!",
  "Player2 now has 1 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 4",
  "Player3's new location is 4",
  "The category is Pop",
  "Pop Question 0",
  "Answer was correct!!!!",
  "Player3 now has 1 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 1",
  "Player4's new location is 1",
  "The category is Science",
  "Science Question 2",
  "Answer was correct!!!!",
  "Player4 now has 1 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 5",
  "Player1's new location is 6",
  "The category is Sports",
  "Sports Question 0",
  "Answer was correct!!!!",
  "Player1 now has 2 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 3",
  "Player2's new location is 8",
  "The category is Pop",
  "Pop Question 1",
  "Answer was correct!!!!",
  "Player2 now has 2 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 5",
  "Player3's new location is 9",
  "The category is Science",
  "Science Question 3",
  "Answer was correct!!!!",
  "Player3 now has 2 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 1",
  "Player4's new location is 2",
  "The category is Sports",
  "Sports Question 1",
  "Answer was correct!!!!",
  "Player4 now has 2 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 5",
  "Player1's new location is 11",
  "The category is Rock",
  "Rock Question 0",
  "Answer was correct!!!!",
  "Player1 now has 3 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 3",
  "Player2's new location is 11",
  "The category is Rock",
  "Rock Question 1",
  "Answer was correct!!!!",
  "Player2 now has 3 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 3",
  "Player3's new location is 0",
  "The category is Pop",
  "Pop Question 2",
  "Answer was correct!!!!",
  "Player3 now has 3 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 4",
  "Player4's new location is 6",
  "The category is Sports",
  "Sports Question 2",
  "Answer was correct!!!!",
  "Player4 now has 3 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 6",
  "Player1's new location is 5",
  "The category is Science",
  "Science Question 4",
  "Answer was correct!!!!",
  "Player1 now has 4 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 1",
  "Player2's new location is 0",
  "The category is Pop",
  "Pop Question 3",
  "Answer was correct!!!!",
  "Player2 now has 4 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 3",
  "Player3's new location is 3",
  "The category is Rock",
  "Rock Question 2",
  "Question was incorrectly answered",
  "Player3 was sent to the penalty box",
  "Player4 is the current player",
  "They have rolled a 6",
  "Player4's new location is 0",
  "The category is Pop",
  "Pop Question 4",
  "Question was incorrectly answered",
  "Player4 was sent to the penalty box",
  "Player1 is the current player",
  "They have rolled a 2",
  "Player1's new location is 7",
  "The category is Rock",
  "Rock Question 3",
  "Answer was correct!!!!",
  "Player1 now has 5 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 5",
  "Player2's new location is 5",
  "The category is Science",
  "Science Question 5",
  "Answer was correct!!!!",
  "Player2 now has 5 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 4",
  "Player3 is not getting out of the penalty box",
  "Question was incorrectly answered",
  "Player3 was sent to the penalty box",
  "Player4 is the current player",
  "They have rolled a 6",
  "Player4 is not getting out of the penalty box",
  "Player1 is the current player",
  "They have rolled a 2",
  "Player1's new location is 9",
  "The category is Science",
  "Science Question 6",
  "Answer was correct!!!!",
  "Player1 now has 6 Gold Coins.",
]
`;

exports[`Game Should be the same output on every run 4`] = `
Array [
  "Player1 was added",
  "They are player number 1",
  "Player2 was added",
  "They are player number 2",
  "Player3 was added",
  "They are player number 3",
  "Player4 was added",
  "They are player number 4",
  "Player1 is the current player",
  "They have rolled a 1",
  "Player1's new location is 1",
  "The category is Science",
  "Science Question 0",
  "Answer was correct!!!!",
  "Player1 now has 1 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 4",
  "Player2's new location is 4",
  "The category is Pop",
  "Pop Question 0",
  "Answer was correct!!!!",
  "Player2 now has 1 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 1",
  "Player3's new location is 1",
  "The category is Science",
  "Science Question 1",
  "Answer was correct!!!!",
  "Player3 now has 1 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 1",
  "Player4's new location is 1",
  "The category is Science",
  "Science Question 2",
  "Answer was correct!!!!",
  "Player4 now has 1 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 3",
  "Player1's new location is 4",
  "The category is Pop",
  "Pop Question 1",
  "Answer was correct!!!!",
  "Player1 now has 2 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 5",
  "Player2's new location is 9",
  "The category is Science",
  "Science Question 3",
  "Answer was correct!!!!",
  "Player2 now has 2 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 4",
  "Player3's new location is 5",
  "The category is Science",
  "Science Question 4",
  "Answer was correct!!!!",
  "Player3 now has 2 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 1",
  "Player4's new location is 2",
  "The category is Sports",
  "Sports Question 0",
  "Answer was correct!!!!",
  "Player4 now has 2 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 3",
  "Player1's new location is 7",
  "The category is Rock",
  "Rock Question 0",
  "Answer was correct!!!!",
  "Player1 now has 3 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 5",
  "Player2's new location is 2",
  "The category is Sports",
  "Sports Question 1",
  "Answer was correct!!!!",
  "Player2 now has 3 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 6",
  "Player3's new location is 11",
  "The category is Rock",
  "Rock Question 1",
  "Answer was correct!!!!",
  "Player3 now has 3 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 2",
  "Player4's new location is 4",
  "The category is Pop",
  "Pop Question 2",
  "Answer was correct!!!!",
  "Player4 now has 3 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 5",
  "Player1's new location is 0",
  "The category is Pop",
  "Pop Question 3",
  "Answer was correct!!!!",
  "Player1 now has 4 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 2",
  "Player2's new location is 4",
  "The category is Pop",
  "Pop Question 4",
  "Answer was correct!!!!",
  "Player2 now has 4 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 5",
  "Player3's new location is 4",
  "The category is Pop",
  "Pop Question 5",
  "Answer was correct!!!!",
  "Player3 now has 4 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 5",
  "Player4's new location is 9",
  "The category is Science",
  "Science Question 5",
  "Answer was correct!!!!",
  "Player4 now has 4 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 4",
  "Player1's new location is 4",
  "The category is Pop",
  "Pop Question 6",
  "Answer was correct!!!!",
  "Player1 now has 5 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 3",
  "Player2's new location is 7",
  "The category is Rock",
  "Rock Question 2",
  "Answer was correct!!!!",
  "Player2 now has 5 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 2",
  "Player3's new location is 6",
  "The category is Sports",
  "Sports Question 2",
  "Answer was correct!!!!",
  "Player3 now has 5 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 6",
  "Player4's new location is 3",
  "The category is Rock",
  "Rock Question 3",
  "Question was incorrectly answered",
  "Player4 was sent to the penalty box",
  "Player1 is the current player",
  "They have rolled a 3",
  "Player1's new location is 7",
  "The category is Rock",
  "Rock Question 4",
  "Answer was correct!!!!",
  "Player1 now has 6 Gold Coins.",
]
`;

exports[`Game Should be the same output on every run 5`] = `
Array [
  "Player1 was added",
  "They are player number 1",
  "Player2 was added",
  "They are player number 2",
  "Player3 was added",
  "They are player number 3",
  "Player4 was added",
  "They are player number 4",
  "Player1 is the current player",
  "They have rolled a 1",
  "Player1's new location is 1",
  "The category is Science",
  "Science Question 0",
  "Answer was correct!!!!",
  "Player1 now has 1 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 2",
  "Player2's new location is 2",
  "The category is Sports",
  "Sports Question 0",
  "Answer was correct!!!!",
  "Player2 now has 1 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 4",
  "Player3's new location is 4",
  "The category is Pop",
  "Pop Question 0",
  "Answer was correct!!!!",
  "Player3 now has 1 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 1",
  "Player4's new location is 1",
  "The category is Science",
  "Science Question 1",
  "Answer was correct!!!!",
  "Player4 now has 1 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 1",
  "Player1's new location is 2",
  "The category is Sports",
  "Sports Question 1",
  "Answer was correct!!!!",
  "Player1 now has 2 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 1",
  "Player2's new location is 3",
  "The category is Rock",
  "Rock Question 0",
  "Answer was correct!!!!",
  "Player2 now has 2 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 3",
  "Player3's new location is 7",
  "The category is Rock",
  "Rock Question 1",
  "Answer was correct!!!!",
  "Player3 now has 2 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 1",
  "Player4's new location is 2",
  "The category is Sports",
  "Sports Question 2",
  "Answer was correct!!!!",
  "Player4 now has 2 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 1",
  "Player1's new location is 3",
  "The category is Rock",
  "Rock Question 2",
  "Answer was correct!!!!",
  "Player1 now has 3 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 1",
  "Player2's new location is 4",
  "The category is Pop",
  "Pop Question 1",
  "Answer was correct!!!!",
  "Player2 now has 3 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 2",
  "Player3's new location is 9",
  "The category is Science",
  "Science Question 2",
  "Answer was correct!!!!",
  "Player3 now has 3 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 5",
  "Player4's new location is 7",
  "The category is Rock",
  "Rock Question 3",
  "Question was incorrectly answered",
  "Player4 was sent to the penalty box",
  "Player1 is the current player",
  "They have rolled a 4",
  "Player1's new location is 7",
  "The category is Rock",
  "Rock Question 4",
  "Answer was correct!!!!",
  "Player1 now has 4 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 2",
  "Player2's new location is 6",
  "The category is Sports",
  "Sports Question 3",
  "Answer was correct!!!!",
  "Player2 now has 4 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 2",
  "Player3's new location is 11",
  "The category is Rock",
  "Rock Question 5",
  "Answer was correct!!!!",
  "Player3 now has 4 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 5",
  "Player4 is getting out of the penalty box",
  "Player4's new location is 0",
  "The category is Pop",
  "Pop Question 2",
  "Answer was correct!!!!",
  "Player4 now has 3 Gold Coins.",
  "Player1 is the current player",
  "They have rolled a 5",
  "Player1's new location is 0",
  "The category is Pop",
  "Pop Question 3",
  "Answer was correct!!!!",
  "Player1 now has 5 Gold Coins.",
  "Player2 is the current player",
  "They have rolled a 2",
  "Player2's new location is 8",
  "The category is Pop",
  "Pop Question 4",
  "Answer was correct!!!!",
  "Player2 now has 5 Gold Coins.",
  "Player3 is the current player",
  "They have rolled a 6",
  "Player3's new location is 5",
  "The category is Science",
  "Science Question 3",
  "Answer was correct!!!!",
  "Player3 now has 5 Gold Coins.",
  "Player4 is the current player",
  "They have rolled a 6",
  "Player4 is not getting out of the penalty box",
  "Player1 is the current player",
  "They have rolled a 5",
  "Player1's new location is 5",
  "The category is Science",
  "Science Question 4",
  "Answer was correct!!!!",
  "Player1 now has 6 Gold Coins.",
]
`;
